[package]
name = "lending-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
anchor-test = []
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
pyth-sdk-solana = "0.4.1"
bytemuck = "1.9.1"
